--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,217 +6,165 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: 1a4p0h04.mcfront.xyz
-    port: 31801
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ph04.lovemc.xyz
-    network: tcp
-  - &id002
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_1
-    type: vmess
-    server: 4o5a3u04.mcfront.xyz
-    port: 31821
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: au04.lovemc.xyz
-    network: tcp
-  - &id003
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
-    type: vmess
-    server: 1c7s2g06.mcfront.xyz
-    port: 31211
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sg06.lovemc.xyz
-    network: tcp
-  - &id004
-    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
-    type: vmess
-    server: 3c2h4u04.mcfront.xyz
-    port: 31864
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hu04.lovemc.xyz
-    network: tcp
-  - &id005
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: 4a2u0a06.mcfront.xyz
-    port: 31511
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us06.lovemc.xyz
-    network: tcp
-  - &id006
-    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
-    type: vmess
-    server: 4t1u6r04.mcfront.xyz
-    port: 31868
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tr04.lovemc.xyz
-    network: tcp
-  - &id007
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: vmess
-    server: 9t1d5e04.mcfront.xyz
-    port: 31841
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: de04.lovemc.xyz
-    network: tcp
-  - &id008
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
-    type: vmess
-    server: 5m4h0k04.mcfront.xyz
-    port: 31601
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hk04.lovemc.xyz
-    network: tcp
-  - &id009
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: 4a2u0a04.mcfront.xyz
-    port: 31501
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us04.lovemc.xyz
-    network: tcp
-  - &id010
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
-    type: vmess
-    server: 6w7j3p06.mcfront.xyz
-    port: 31111
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp06.lovemc.xyz
-    network: tcp
-  - &id011
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
-    type: vmess
-    server: 9s5g06.abzoones.xyz
-    port: 36211
-    cipher: auto
-    uuid: f30733eb-b6e9-4593-baca-b02db8189263
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sg06.abpilot.xyz
-    network: tcp
-  - &id012
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: vmess
-    server: 3u1s05.abzoones.xyz
-    port: 36506
-    cipher: auto
-    uuid: f30733eb-b6e9-4593-baca-b02db8189263
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us05.abpilot.xyz
-    network: tcp
-  - &id013
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: cf5.992688.xyz
-    port: 8080
+    server: 107.167.12.30
+    port: 41707
     cipher: auto
-    uuid: 6b056a2c-b821-44b2-cf66-59a1126f6c94
-    alterId: 0
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: o1.992688.xyz
-  - &id014
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_3
-    type: vmess
-    server: 9s5g04.abzoones.xyz
-    port: 36201
-    cipher: auto
-    uuid: f30733eb-b6e9-4593-baca-b02db8189263
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sg04.abpilot.xyz
     network: tcp
-  - &id015
-    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国
-    type: vmess
-    server: 8l2k1r04.mcfront.xyz
-    port: 31401
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: kr04.lovemc.xyz
-    network: tcp
-  - &id016
-    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 4t1r5u04.mcfront.xyz
-    port: 31851
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ru04.lovemc.xyz
-    network: tcp
-  - &id017
-    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
-    type: vmess
-    server: 7c6i2r04.mcfront.xyz
-    port: 31877
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: br04.lovemc.xyz
-    network: tcp
-  - &id018
+  - &id002
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: 108.186.116.177
-    port: 55005
+    server: 140.99.57.3
+    port: 50042
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 199.188.111.55
+    port: 35602
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 198.2.218.206
+    port: 51203
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 137.175.41.200
+    port: 50004
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 156.225.67.89
+    port: 48821
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 38.121.43.71
+    port: 5004
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id008
+    name: 🇰🇷_KR_韩国_1
+    type: ss
+    server: 43.201.60.244
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id009
+    name: 🇰🇷_KR_韩国_2
+    type: ss
+    server: 3.35.230.64
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id010
+    name: 🇸🇬_SG_新加坡_1
+    type: ss
+    server: 18.139.108.187
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇯🇵_JP_日本_1
+    type: ss
+    server: 43.207.74.136
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 38.121.43.71
+    port: 443
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
+  - &id013
+    name: 🇹🇼_TW_台湾_1
+    type: ss
+    server: 103.177.33.180
+    port: 443
+    password: 9e44e9ffe5c2
+    cipher: chacha20-ietf-poly1305
+    plugin: v2ray-plugin
+    plugin-opts:
+      mode: websocket
+      host: wtw1000mline004.chilines.club
+      path: /isaifqaagpi
+      mux: true
+  - &id014
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 137.175.54.211
+    port: 50502
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+  - &id015
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 142.4.110.24
+    port: 52908
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+  - &id016
+    name: 🇯🇵_JP_日本_2
+    type: ss
+    server: 3.112.43.220
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id017
+    name: 🇸🇬_SG_新加坡_2
+    type: ss
+    server: 52.221.196.233
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id018
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 192.74.234.150
+    port: 42329
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
@@ -224,121 +172,128 @@ proxies:
     skip-cert-verify: true
     network: tcp
   - &id019
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+    name: 🇺🇸_US_美国_11
     type: vmess
-    server: 8h2k05.abzoones.xyz
-    port: 36606
-    cipher: auto
-    uuid: f30733eb-b6e9-4593-baca-b02db8189263
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hk05.abpilot.xyz
-    network: tcp
-  - &id020
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
-    type: vmess
-    server: 4a2u0a05.mcfront.xyz
-    port: 31506
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us05.lovemc.xyz
-    network: tcp
-  - &id021
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_3
-    type: vmess
-    server: 5m4h0k06.mcfront.xyz
-    port: 31611
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hk06.lovemc.xyz
-    network: tcp
-  - &id022
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_2
-    type: vmess
-    server: 2d1t5w05.mcfront.xyz
-    port: 31306
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tw05.lovemc.xyz
-    network: tcp
-  - &id023
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
-    type: vmess
-    server: 2d1t5w04.mcfront.xyz
-    port: 31301
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tw04.lovemc.xyz
-    network: tcp
-  - &id024
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: bluehost.com
+    server: 137.175.15.207
     port: 443
     cipher: auto
-    uuid: be74ca03-6a7c-4c88-edc2-c6434ead0cfa
-    alterId: 0
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
     tls: true
     skip-cert-verify: true
+    servername: www.83524650.xyz
     network: ws
     ws-opts:
-      path: /16575
-      headers:
-        host: cdnca1.digisport.shop
-  - &id025
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
+      path: /path/1687684544019
+  - &id020
+    name: 🇺🇸_US_美国_12
     type: vmess
-    server: 1j8p04.abzoones.xyz
-    port: 36116
+    server: 23.225.211.20
+    port: 42941
     cipher: auto
-    uuid: f30733eb-b6e9-4593-baca-b02db8189263
-    alterId: 0
-    tls: true
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
     skip-cert-verify: true
-    servername: jp04.abpilot.xyz
     network: tcp
-  - &id026
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_3
+  - &id021
+    name: 🇸🇬_SG_新加坡_3
+    type: ss
+    server: 54.251.168.143
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id022
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
     type: vmess
-    server: 6w7j3p04.mcfront.xyz
-    port: 31116
-    cipher: auto
-    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp04.lovemc.xyz
-    network: tcp
-  - &id027
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: speedip.eu.org
+    server: dearma.76898102.xyz
     port: 2052
     cipher: auto
-    uuid: f8c60a5b-ec67-4ccc-bc91-d297fe79b977
+    uuid: 3f6ad16c-f1ea-38fd-bf1d-a64e77ffaa32
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /waugfuigvhwoa
+      path: /abuciwyg
       headers:
-        host: nl_nat.v50.one
+        host: dearma.76898102.xyz
+  - &id023
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 108.162.193.134
+    port: 2052
+    cipher: auto
+    uuid: 87959d44-4377-4557-cf36-2f7db9d790f6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: er.vtcss.top
+  - &id024
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 104.19.103.82
+    port: 2095
+    cipher: auto
+    uuid: 49039962-1bcb-4a51-8138-0843aee1ea71
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: t.wang66.homes
+  - &id025
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: 64.32.24.213
+    port: 48659
+    cipher: auto
+    uuid: cff9d860-7330-4ee1-b072-7142ddf1571d
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id026
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: v35.emovpn.life
+    port: 443
+    cipher: auto
+    uuid: 02ce2c78-8a38-4207-b49f-61a813b25ff1
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: v35.emovpn.xyz
+  - &id027
+    name: 🇸🇬_SG_新加坡_4
+    type: ss
+    server: 13.213.46.196
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
   - &id028
-    name: 🇺🇸_US_美国_4
+    name: 🇺🇸_US_美国_17
+    type: vmess
+    server: 142.4.126.42
+    port: 44392
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id029
+    name: 🇺🇸_US_美国_18
     type: vmess
     server: cf5.vpn66.eu.org
     port: 8080
@@ -352,37 +307,142 @@ proxies:
       path: /
       headers:
         host: vcus.vpn66.eu.org
-  - &id029
-    name: 🇬🇧_GB_英国
+  - &id030
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
     type: vmess
-    server: 109.74.201.20
+    server: 104.31.16.28
+    port: 80
+    cipher: auto
+    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /IOebhLMhl1CTbFHbL95myfRX2
+      headers:
+        host: ca4.tehme2.fun
+  - &id031
+    name: 🇺🇸_US_美国_19
+    type: vmess
+    server: visa.com
+    port: 2052
+    cipher: auto
+    uuid: 03759921-9859-41b5-de64-2e0b2b61d488
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: c.ghhymua.tk
+  - &id032
+    name: 🇹🇼_TW_台湾_2
+    type: vmess
+    server: 333333ddnstw.xn--9kqu73b.xyz
+    port: 15410
+    cipher: auto
+    uuid: f221cb8a-ea54-4336-b004-54dc384aabbd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: 333333ddnstw.xn--9kqu73b.xyz
+  - &id033
+    name: 🇺🇸_US_美国_20
+    type: vmess
+    server: digitalocean.com
+    port: 8080
+    cipher: auto
+    uuid: c3b11744-2b20-46af-f0d4-69122be36e74
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: vcus.vpn66.eu.org
+  - &id034
+    name: 🇺🇸_US_美国_21
+    type: vmess
+    server: 104.24.226.79
     port: 443
     cipher: auto
-    uuid: 927094d3-d678-4763-8591-e240d0bcae87
+    uuid: 9ffbb816-b4bb-493f-b558-df527b767456
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /chat
-  - &id030
-    name: 🇹🇼_TW_台湾_1
-    type: trojan
-    server: 211.21.20.69
+      path: /ports/10178
+      headers:
+        host: star-one.cfd
+  - &id035
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: vmess
+    server: jpwadnca.114514782.xyz
+    port: 2052
+    cipher: auto
+    uuid: 3f6ad16c-f1ea-38fd-bf1d-a64e77ffaa32
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /miaoshen
+      headers:
+        host: jpwadnca.114514782.xyz
+  - &id036
+    name: 🇺🇸_US_美国_22
+    type: vmess
+    server: cold-dawn-9246.fly.dev
     port: 443
+    cipher: auto
+    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
+      headers:
+        host: cold-dawn-9246.fly.dev
+  - &id037
+    name: 🇰🇷_KR_韩国_3
+    type: vmess
+    server: 0kxedm1x8q8lksmj07.xingbayun.buzz
+    port: 443
+    cipher: auto
+    uuid: 89d679fb-e2fb-42ff-b830-38e5ae86065c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /zh-cn
+      headers:
+        host: 0kxedm1x8q8lksmj07.xingbayun.buzz
+  - &id038
+    name: 🇭🇰_HK_香港
+    type: trojan
+    server: hk1t.yexiangye.top
+    port: 20001
     udp: true
-    password: 1381fa76-e460-3a03-a01b-b9ad00e01415
+    password: 4d4b4def-acd6-4610-8337-33d31b082a77
     skip-cert-verify: true
     network: tcp
-  - &id031
-    name: 🇹🇼_TW_台湾_2
-    type: trojan
-    server: ip1158944211.mobgslb.tbcache.com
-    port: 443
-    udp: true
-    password: 1381fa76-e460-3a03-a01b-b9ad00e01415
-    skip-cert-verify: true
-    network: tcp
+  - &id039
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡
+    type: ss
+    server: newapisg.abbblog.xyz
+    port: 34421
+    password: 87819b0a-6976-457a-a02c-26b30a0509c9
+    cipher: aes-128-gcm
 proxy-groups:
   - name: PROXY
     type: select
@@ -440,6 +500,14 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -476,6 +544,14 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
   - name: SELECT
     type: select
     proxies:
@@ -510,6 +586,14 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
