--- a/pub/jiang.yaml
+++ b/pub/jiang.yaml
@@ -5,23 +5,22 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: https://1808.cf 二爷翻墙_1, server: tk.731808.tk, port: 443, type: vmess, uuid: 20c08a8d-85d6-47c6-bbb0-c8389a578b71, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /7803f1, headers: {Host: tk.731808.tk}}}
-  - {name: https://1808.cf 二爷翻墙_2, server: 202.108.15.135, port: 443, type: vmess, uuid: 20c08a8d-85d6-47c6-bbb0-c8389a578b71, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /7803f1, headers: {Host: tk.731808.tk}}}
-  - {name: https://1808.cf 二爷翻墙_3, server: 162.159.243.235, port: 443, type: vmess, uuid: 20c08a8d-85d6-47c6-bbb0-c8389a578b71, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /7803f1, headers: {Host: tk.731808.tk}}}
-  - {name: https://1808.cf 二爷翻墙_4, server: 162.159.243.21, port: 443, type: vmess, uuid: 20c08a8d-85d6-47c6-bbb0-c8389a578b71, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /7803f1, headers: {Host: tk.731808.tk}}}
-  - {name: https://1808.cf 二爷翻墙_5, server: 207.174.22.45, port: 443, type: vmess, uuid: 20c08a8d-85d6-47c6-bbb0-c8389a578b71, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /7803f1, headers: {Host: tk.731808.tk}}}
-  - {name: https://1808.cf 二爷翻墙_6, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
-  - {name: https://1808.cf 二爷翻墙_7, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
-  - {name: https://1808.cf 二爷翻墙_8, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
-  - {name: https://1808.cf 二爷翻墙_9, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: do.sharecentrepro.com}}}
-  - {name: https://1808.cf 二爷翻墙_10, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: uk1.scproxy.top}}}
-  - {name: https://1808.cf 二爷翻墙_11, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
-  - {name: https://1808.cf 二爷翻墙_16, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
-  - {name: https://1808.cf 二爷翻墙_17, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.scproxy.top}}}
+  - {name: https://1808.cf 二爷翻墙_1, server: speed.cloudflare.com, port: 443, type: vmess, uuid: 10ea07e1-417a-4bb2-88e2-72a8a0f9fcd6, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: 10ea07e1, headers: {Host: dedi2.1808.cf}}}
+  - {name: https://1808.cf 二爷翻墙_2, server: speed.cloudflare.com, port: 80, type: vmess, uuid: 10ea07e1-417a-4bb2-88e2-72a8a0f9fcd6, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: 10ea07e1, headers: {Host: dedi2.1808.cf}}}
+  - {name: https://1808.cf 二爷翻墙_3, server: cdn.anycast.eu.org, port: 80, type: vmess, uuid: 10ea07e1-417a-4bb2-88e2-72a8a0f9fcd6, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: 10ea07e1, headers: {Host: dedi2.1808.cf}}}
+  - {name: https://1808.cf 二爷翻墙_4, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
+  - {name: https://1808.cf 二爷翻墙_5, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
+  - {name: https://1808.cf 二爷翻墙_6, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: do.sharecentrepro.com}}}
+  - {name: https://1808.cf 二爷翻墙_7, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: sgaws1.scproxy.top}}}
+  - {name: https://1808.cf 二爷翻墙_8, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: uk1.scproxy.top}}}
+  - {name: https://1808.cf 二爷翻墙_9, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
+  - {name: https://1808.cf 二爷翻墙_10, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
+  - {name: https://1808.cf 二爷翻墙_11, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
+  - {name: https://1808.cf 二爷翻墙_12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
+  - {name: https://1808.cf 二爷翻墙_13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
+  - {name: https://1808.cf 二爷翻墙_14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
+  - {name: https://1808.cf 二爷翻墙_15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.scproxy.top}}}
+  - {name: https://1808.cf 二爷翻墙_16, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
@@ -44,7 +43,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
       - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -67,7 +65,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
       - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -90,7 +87,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
       - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
   - name: 📲 电报信息
     type: select
     proxies:
@@ -112,7 +108,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
       - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
@@ -134,7 +129,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
       - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -156,7 +150,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
       - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
   - name: 📢 谷歌FCM
     type: select
     proxies:
@@ -179,7 +172,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
       - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -218,7 +210,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
       - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
 rules:
  - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
  - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
